Fixed image not showing

--- a/src/sass/base/_reset.scss
+++ b/src/sass/base/_reset.scss
@@ -7,5 +7,19 @@
     padding: 0;
 }
 
+/* Remove default margin */
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+figure,
+blockquote,
+dl,
+dd {
+  margin: 0;
+}
+
 /* End of Bell's Reset */
 /* Begin My CSS */
